<?xml version="1.0"?>
<package>
    <name>sekonix_camera_ut</name>
    <version>0.0.0</version>
    <description>The sekonix_camera package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="maxandre.ogeret@ut.ee">Maxandre Ogeret</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>h264_image_transport_msgs</build_depend>

    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>camera_info_manager</run_depend>
    <run_depend>message_runtime</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
